tests/ui/raw_sql/fail/typed_param_tag_mismatch.stderr
error[E0271]: type mismatch resolving `<&str as ValueTypeForDialect<SQLiteDialect>>::SQLType == Integer`
  --> tests/ui/raw_sql/fail/typed_param_tag_mismatch.rs:25:34
   |
25 |         .all(db.conn(), [id.bind("thisisntnumbersoshouldfail")])
   |                             ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Integer`, found `Text`
   |                             |
   |                             required by a bound introduced by this call
   |
   = note: required for `&str` to implement `drizzle_core::bind::BindValue<'_, SQLiteValue<'_>, drizzle::sqlite::types::Integer>`
note: required by a bound in `TypedPlaceholder::<T, N>::bind`
  --> core/src/placeholder.rs
   |
   |     pub fn bind<'a, V, R>(self, value: R) -> ParamBind<'a, V>
   |            ---- required by a bound in this associated function
...
   |         R: BindValue<'a, V, T>,
   |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `TypedPlaceholder::<T, N>::bind`
